# rsschool

rsschool_classification_linear_knn_5/: README.md  hw_classification.ipynb  predictions.csv
rsschool_eda_2/: README.md
rsschool_evaluation_selection_9/: README.md  pyproject.toml
rsschool_evaluation_selection_9/src/forest_ml/: pipeline.py  train.py
rsschool_evaluation_selection_9/tests/: forest_ml.py
rsschool_feature_engineering_and_selection_6/: homework.ipynb
rsschool_linear_regression_3/: linear_regression.ipynb
rsschool_overfitting_regularization_4/: overfitting_regularization.ipynb
rsschool_trees_and_ensembles_7/: predictions.csv  rf_classifier.ipynb
