[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "Rsschool_evaluation_selection_9"
authors = ["Setom29 <sergeymtolstov35@gmail.com>"]

[tool.poetry.scripts]
train = "forest_ml.train:train"

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
joblib = "^1.1.0"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
click = "^8.1.3"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
